--- a/1.html
+++ b/1.html
@@ -14,10 +14,6 @@
 <h2>HTML이란 무엇인가?</h2>
 <a href="https://www.w3.org/TR/html4/"
 target="_blank" title="html5 specification">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.
-This is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text <p>in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraph
-This is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraph</p>
-<img src="coding.jpg" width="50%">
-<p style="margin-top:40px;">This is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraph
-This is some text in a paragraphThis is some text in a paragraph</p>
+This is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text in a paragraphThis is some text <p>hello</p>
 </body>
 </html>
